--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ buildscript {
         classpath 'com.android.tools.build:gradle:7.4.2'
         // Add the dependency for the Google services Gradle plugin
         classpath 'com.google.gms:google-services:4.3.15'
+        classpath 'com.google.firebase:firebase-bom:31.5.0'
+
 
     }
 }
